--- a/app/src/main/res/layout/player_activity.xml
+++ b/app/src/main/res/layout/player_activity.xml
@@ -1,48 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root"
-    android:focusable="true"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:keepScreenOn="true">
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:id="@+id/root"
+             android:focusable="true"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:keepScreenOn="true">
 
-  <com.google.android.exoplayer.AspectRatioFrameLayout
-      android:id="@+id/video_frame"
+  <com.google.android.exoplayer2.ui.PlayerView
+      android:id="@+id/player_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_gravity="center">
-
-    <SurfaceView android:id="@+id/surface_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"/>
-
-    <View android:id="@+id/shutter"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/black"/>
-
-    <com.google.android.exoplayer.text.SubtitleLayout
-        android:id="@+id/subtitles"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-  </com.google.android.exoplayer.AspectRatioFrameLayout>
-
-  <LinearLayout android:id="@+id/controls_root"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="#88000000"
-      android:orientation="horizontal"
-      android:visibility="gone">
-
-    <Button android:id="@+id/retry_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/retry"
-        android:visibility="gone"
-        style="@style/DemoButton"/>
-
-  </LinearLayout>
+      app:show_buffering="when_playing"
+      app:show_shuffle_button="true"/>
 
 </FrameLayout>
