--- a/app/src/main/res/layout/sample_chooser_activity.xml
+++ b/app/src/main/res/layout/sample_chooser_activity.xml
@@ -7,15 +7,21 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/select_video_margin_vertical"
-      android:layout_marginBottom="@dimen/select_video_margin_vertical"
-      android:layout_marginStart="@dimen/select_video_margin_left"
+      android:layout_marginTop="@dimen/welcome_page_margin_vertical"
+      android:layout_marginBottom="@dimen/welcome_page_margin_vertical"
+      android:layout_marginStart="@dimen/welcome_page_margin_horizontal"
+      android:layout_marginEnd="@dimen/welcome_page_margin_horizontal"
       android:text="@string/select_video"
       android:textColor="#000000"
       android:textSize="@dimen/welcome_page_font_size"/>
 
-  <ListView android:id="@+id/sample_list"
+  <ListView
+      android:id="@+id/sample_list"
       android:layout_width="match_parent"
-      android:layout_height="match_parent" />
+      android:layout_height="match_parent"
+      android:layout_marginStart="@dimen/welcome_page_margin_horizontal"
+      android:layout_marginEnd="@dimen/welcome_page_margin_horizontal"
+      android:layout_marginBottom="@dimen/welcome_page_margin_vertical"
+      />
 
 </LinearLayout>
